# mmor

./: .gitignore  pyproject.toml  readme.md
AdvPortal/: db.sqlite3
AdvPortal/callboard/: admin.py  apps.py  filter.py  forms.py  models.py  signals.py  urls.py  views.py
AdvPortal/callboard/migrations/: 0001_initial.py  0002_category_alter_user_code_advert_response.py  0003_alter_advert_category_alter_response_advert_and_more.py  0004_alter_advert_category_advert_file_delete_category.py  0005_alter_response_options_remove_response_created.py  0006_alter_advert_contacts.py  0007_remove_advert_contacts_remove_advert_price.py
AdvPortal/callboard/templates/callboard/: advert.html  advert_create.html  advert_delete.html  advert_detail.html  advert_update.html  adverts.html  email_message.html  index.html  profile.html  response_create.html  response_delete.html  response_detail.html  response_update.html  responses.html
AdvPortal/callboard/views/: advert.py  confirm.py  response.py
AdvPortal/templates/: 403.html  bootstrap5.html  default.html
AdvPortal/templates/account/: account_inactive.html  signup.html
AdvPortal/templates/allauth/layouts/: base.html
AdvPortal/templates/users/: invalid_code.html
AdvPortal/work/: .env  .env.py  settings.py  urls.py
